# realtimevehicletracker

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  cr.sh  dronePos.yaml  filename.txt  fragments.txt  init.sql  install.sh  projection.yaml  rtsp.sh  streamVideo.sh  tmux.sh
examples/: CMakeLists.txt  detection_yolov5_image.cpp  kalmanFilter.cpp
examples/projection/: projectionTest.cpp
examples/sql/: sqlTest.cpp
examples/udpBasic/: tcpClientTest.cpp  udpClientTest.cpp  udpServerTest.cpp
examples/udpConn/: testCampaign.cpp  udpConnSimulator.cpp  udpConnTestC.cpp  udpConnTestS.cpp
examples/yolo/: detection_yolov5_stream.cpp  detection_yolov5_video.cpp
models/: yolov7.onnx
scripts/: install.sh  testCampaign.py  testCampaignerrors.py  testCampaignheight.py  tmux.sh  videoFormatter.sh  video_creator.sh
src/: CMakeLists.txt  main.cpp
src/RealWorldProcessing/udpThread/: udpConn.cpp  udpConn.hpp
src/detection/: CMakeLists.txt  Detector.cpp  Detector.h  constants.h
src/projection/: CMakeLists.txt  projection.cpp  projection.h
src/sql/: CMakeLists.txt  SqlConn.cpp  SqlConn.h
src/tracking/: CMakeLists.txt  KalmanTracker.cpp  KalmanTracker.h  TrackerHandler.cpp  TrackerHandler.h
src/tracking/udpThread/: udpConn.cpp  udpConn.hpp
src/udp/: CMakeLists.txt
src/utils/: drawing.h
